added file iframe

--- a/templates/project_page.html
+++ b/templates/project_page.html
@@ -3,31 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ project_name }}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <h3> FILES: </h3>
     {% for subpart in project %}
         {% if "size" in project[subpart] %}
-            <p>File Name: {{ subpart }}</p>
-            <p>Author: {{ project[subpart]['author'] }} </p>
-            <p>Version: {{ project[subpart]['version'] }} </p>
-            <p>Summary: {{ project[subpart]['summary'] }} </p>
-            <p>Date: {{ project[subpart]['date'] }} </p>
-            <p>Version: {{ project[subpart]['size'] }} </p>
-            <p><a href="/{{project_name}}/{{subpart}}">View File</a></p>
-            <br>
+            <ul class="project-categories">
+                <li>
+                    <p>File Name: {{ subpart }}</p>
+                    <p><a href="{{ url_for('access_subdirectory', project=project_name, is_file=True, name=subpart) }}">View Detail</a></p>
+                    <br>
+                </li>
+            </ul>
         {% endif %}
     {% endfor %}
+    <br><br><br><br><br><br>
     <hr>
     <h3> SUBDIRECTORIES: </h3>
     {% for subpart in project %}
         {% if "size" not in project[subpart] %}
-            <p>Directory Name: {{ subpart }}</p>
-            <p>Date: {{ project[subpart]['date'] }}</p>
-            <p>Version: {{ project[subpart]['version'] }}</p>
-            <p>Summary: {{ project[subpart]['summary'] }}</p>
-            <p>Author: {{ project[subpart]['author'] }}</p>
-            <p><a class="btn" href="/{{project_name}}/{{subpart}}">View details </a></p>
+            <ul class="project-categories">
+                <li>
+                    <p>Directory Name: {{ subpart }}</p>
+                    <p>Date: {{ project[subpart]['date'] }}</p>
+                    <p>Version: {{ project[subpart]['version'] }}</p>
+                    <p>Summary: {{ project[subpart]['summary'] }}</p>
+                    <p>Author: {{ project[subpart]['author'] }}</p>
+                    <p><a href="{{ url_for('access_subdirectory', project=project_name, is_file=False, name=subpart) }}">View Details</a></p>
+                </li>
+            </ul>
         {% endif %}
     {% endfor %}
 </body>
