--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 align="center">SVN Project Summaries</h1>
-    <div class="primary-content">
+    <div>
         <ul class="project-categories">
             {% for project in projects %}
             <li>
@@ -16,7 +16,7 @@
                 <p>Version: {{ projects[project]['version'] }}</p>
                 <p>Summary: {{ projects[project]['summary'] }}</p>
                 <p>Author: {{ projects[project]['author'] }}</p>
-                <p><a class="btn" href="/{{project}}">View details </a></p>
+                <p><a href="{{ url_for('access_project', project_name = project) }}">View Details</a></p>
             </li>
             {% endfor %}
         </ul>
