--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,36 @@
+body{
+    background: #e6f3f7;
+}
+
 .project-categories li {
   width: 31%;
-  background: #d3d3d3;
+  background: #B0C4DE;
+  background-repeat: no-repeat;
+  display: block;
+  margin-left: 1%;
+  margin-bottom: 1%;
+  margin-right: 1%;
+  text-align: center;
+  float: left;
+  font-weight: normal;
+}
+
+.project-subdirectories li {
+  width: 31%;
+  background: #0099cc;
+  background-repeat: no-repeat;
+  display: block;
+  margin-left: 1%;
+  margin-bottom: 1%;
+  margin-right: 1%;
+  text-align: center;
+  float: left;
+  font-weight: normal;
+}
+
+.file-data li {
+  width: 31%;
+  background: #52c352;
   background-repeat: no-repeat;
   display: block;
   margin-left: 1%;
