--- a/templates/index.html
+++ b/templates/index.html
@@ -6,18 +6,19 @@
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
-    <h1 align="center">SVN Project Summaries</h1>
+    <h1 align="center">Arnav Mishra's SVN Projects</h1>
     <div>
         <ul class="project-categories">
             {% for project in projects %}
-            <li>
-                <h2 align="center">Project Title: {{ project }}</h2>
-                <p>Date: {{ projects[project]['date'] }}</p>
-                <p>Version: {{ projects[project]['version'] }}</p>
-                <p>Summary: {{ projects[project]['summary'] }}</p>
-                <p>Author: {{ projects[project]['author'] }}</p>
-                <p><a href="{{ url_for('access_project', project_name = project) }}">View Details</a></p>
-            </li>
+                {% if "date" in projects[project] %}
+                <li>
+                    <h2 align="center">Project Title: {{ project }}</h2>
+                    <p>Date: {{ projects[project]['date'] }}</p>
+                    <p>Version: {{ projects[project]['version'] }}</p>
+                    <p>Summary: {{ projects[project]['summary'] }}</p>
+                    <p><a href="{{ url_for('access_project', project_name = project) }}">View Project Details</a></p>
+                </li>
+                {% endif %}
             {% endfor %}
         </ul>
     </div>
