--- a/portfolio/templates/revisions_page.html
+++ b/portfolio/templates/revisions_page.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ file_name }} Revisions</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
     <a href="/" title="Return to Home Page" style="float: right;"><b>Return Home</b></a>
