--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>SVN Projects</title>
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
     <h1 align="center">Arnav Mishra's SVN Projects</h1>
