--- a/portfolio/templates/project_page.html
+++ b/portfolio/templates/project_page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{{ project_name }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
     <a href="/" title="Return to Home Page" style="float: right;"><b>Return Home</b></a>
