--- a/portfolio/templates/file_page.html
+++ b/portfolio/templates/file_page.html
@@ -23,7 +23,8 @@
             Show revisions</a></p>
     {% endif %}
     <hr>
-    <iframe src="{{ file_data['url'] }}" width=100% height="500">File</iframe>
+    <iframe src="{{ file_data['url'] }}" width=100% height="500" allowTransparency="true"
+            style="background-color:white;" >File</iframe>
     <hr>
     <div id="comment-body">
         <h1>Comments</h1>
