--- a/portfolio/templates/revisions_page.html
+++ b/portfolio/templates/revisions_page.html
@@ -16,4 +16,6 @@
             <iframe src="{{ revision['url'] }}" width=100% height="500">File</iframe>
             <hr>
     {% endfor %}
+    <br>
+    <p> No comments allowed on revisions. </p>
 </body>
