--- a/portfolio/templates/file_page.html
+++ b/portfolio/templates/file_page.html
@@ -5,6 +5,7 @@
     <title>{{ file_name }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 <body>
 <p>{{ project }} </p>
