--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
-    <h1 align="center">Arnav Mishra's SVN Projects</h1>
+    <h1 align="center">SVN Projects</h1>
     <div>
         <ul class="project-categories">
             {% for project in projects %}
